putting the right start and fix music

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,30 @@
 /application/
 /engine/
+/tests/
+/3Ghrl1.png
+/Deadpool.jpg
+/Dr Strange.jpg
+/Electro.png
+/Ghost Rider.jpg
+/Hela.jpg
+/Hulk.jpg
+/Iceman.jpg
+/Ironman.jpg
+/Loki.jpg
+/Quicksilver.png
+/Spiderman.jpg
+/Thor.jpg
+/Venom.jpg
+/Yellow Jacket.jpg
+/board3.png
+/board7.png
+/captin.jpg
+/end.png
+/images.png
+/logo.png
+/m.png
+/shape1.png
+/shape2.png
+/shape3.png
+/shape4.png
+/shield.png
